welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:-6: error: Missing closing brace `}' assumed here
try {
^in3050:1: error: expected class or object definition
def in3050(a:Int, b:Int):Boolean = {
^